<resources>
    <string name="app_name">Friendly Calc</string>
    <string name="formulas">Formula\'s</string>
    <string name="user_rules">User\'s Rules</string>
    <string name="settings">Settings</string>
    <string name="show_rules">Show Rules</string>
    <string name="add_rules">Add New Rule</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="Clear">C</string>
    <string name="Praces">()</string>
    <string name="modules">^</string>
    <string name="divide">/</string>
    <string name="multi">x</string>
    <string name="subtract">-</string>
    <string name="plus">+</string>
    <string name="equal">=</string>
    <string name="dot">.</string>
    <string name="PosNeg">+/-</string>
    <string name="display">Enter a Value</string>
    <string name="backspace"></string>
    <string name="History">History</string>
    <string name="Advanced">Adv.</string>


    <string name="my_rad">Rad</string>
    <string name="my_root">Root</string>
    <string name="my_mod">%</string>
    <string name="my_sin" />
    <string name="my_sin2">Sin</string>
    <string name="my_cos">Cos</string>
    <string name="my_tan">Tan</string>
    <string name="my_ln">Ln</string>
    <string name="my_log">Log</string>
    <string name="my_inverse">1/X</string>
    <string name="mu_exp">e^x</string>
    <string name="my_power">X^2</string>
    <string name="my_powerr">X^Y</string>
    <string name="my_abs">|X|</string>
    <string name="my_pi">Pi</string>
    <string name="my_e">e</string>
    <string name="my_clear">C</string>
    <string name="my_brackets">()</string>
    <string name="my_raise">^</string>
    <string name="my_div">/</string>
    <string name="my_seven">7</string>
    <string name="my_eight">8</string>
    <string name="my_nine" />
    <string name="my_nine2">9</string>
    <string name="my_multi">X</string>
    <string name="my_four">4</string>
    <string name="my_five">5</string>
    <string name="my_six">6</string>
    <string name="my_six2">6</string>
    <string name="my_sub">-</string>
    <string name="my_one">1</string>
    <string name="my_two">2</string>
    <string name="my_three">3</string>
    <string name="my_add">+</string>
    <string name="my_addandsub">+/-</string>
    <string name="my_zero">0</string>
    <string name="my_dot">.</string>
    <string name="my_equal">=</string>
    <string name="my_basic">Basic</string>
    <string name="my_history">History</string>
    <string name="my_third">X^3</string>


</resources>