<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScientificActivity">

    <TableLayout
        android:id="@+id/table2"
        android:layout_width="339dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.009"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TableRow
            android:id="@+id/tablerow1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/Rad"
                android:layout_width="124dp"
                android:layout_height="wrap_content"
                android:text="@string/my_rad" />

            <Button
                android:id="@+id/Root"
                android:layout_width="111dp"
                android:layout_height="wrap_content"
                android:text="@string/my_root" />

            <Button
                android:id="@+id/Mod"
                android:layout_width="113dp"
                android:layout_height="wrap_content"
                android:text="@string/my_mod"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tablerow2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/Sin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_sin2" />

            <Button
                android:id="@+id/Cos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_cos" />

            <Button
                android:id="@+id/Tan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_tan" />

        </TableRow>

        <TableRow
            android:id="@+id/tablerow3"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/Exponential"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mu_exp" />

            <Button
                android:id="@+id/Power"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_power" />

            <Button
                android:id="@+id/Powerr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_powerr" />
        </TableRow>

        <TableRow
            android:id="@+id/tablerow4"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/Absolute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_abs" />

            <Button
                android:id="@+id/Pi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_pi" />

            <Button
                android:id="@+id/E"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_e" />
        </TableRow>

        <TableRow
            android:id="@+id/tablerow10"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/Log"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_log" />

            <Button
                android:id="@+id/Ln"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_ln" />

            <Button
                android:id="@+id/Third"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_third"
                android:textSize="14sp" />
        </TableRow>

    </TableLayout>

    <TableLayout
        android:id="@+id/table1"
        android:layout_width="366dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/table2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TableRow

            android:id="@+id/tablerow5"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/Clear"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:text="@string/my_clear" />

            <Button
                android:id="@+id/Brackets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_brackets"
                android:textSize="16sp" />

            <Button
                android:id="@+id/Raise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_raise"
                android:textSize="16sp" />

            <Button
                android:id="@+id/Division"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_div"
                android:textSize="16sp" />

        </TableRow>

        <TableRow
            android:id="@+id/tablerow6"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/Seven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_seven"
                android:textSize="16sp" />

            <Button
                android:id="@+id/Eight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_eight"
                android:textSize="16sp" />

            <Button
                android:id="@+id/Nine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_nine2" />

            <Button
                android:id="@+id/Multiplication"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_multi" />
        </TableRow>

        <TableRow
            android:id="@+id/tabelrow7"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/Four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_four"
                android:textSize="16sp" />

            <Button
                android:id="@+id/Five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_five"
                android:textSize="16sp" />

            <Button
                android:id="@+id/Six"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_six2"
                android:textSize="16sp" />

            <Button
                android:id="@+id/Subtraction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_sub"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tablerow8"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/One"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_one"
                android:textSize="16sp" />

            <Button
                android:id="@+id/Two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_two"
                android:textSize="16sp" />

            <Button
                android:id="@+id/Three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_three"
                android:textSize="16sp" />

            <Button
                android:id="@+id/Addation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_add"
                android:textSize="16sp" />

        </TableRow>

        <TableRow
            android:id="@+id/tablerow9"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/AddSub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_addandsub"
                android:textSize="16sp" />

            <Button
                android:id="@+id/Zero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_zero"
                android:textSize="16sp" />

            <Button
                android:id="@+id/Dot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_dot"
                android:textSize="16sp" />

            <Button
                android:id="@+id/Equal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_equal"
                android:textSize="16sp" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/Basic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_basic"
        app:layout_constraintBottom_toTopOf="@+id/table2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.024"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.804" />

    <Button
        android:id="@+id/History"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_history"
        app:layout_constraintBottom_toTopOf="@+id/table2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@+id/Basic"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.804" />

</androidx.constraintlayout.widget.ConstraintLayout>